--- a/ZMS/trunk/plugins/www/manage_page_style.css
+++ b/ZMS/trunk/plugins/www/manage_page_style.css
@@ -597,27 +597,31 @@ form {
 textarea.form-element, input.form-element, select.form-element,
 textarea.form-small, input.form-small, select.form-small {
 	font-family: Arial, sans-serif!important;
+	background-color: #FFF;
 	border: 1px solid #666!important;
 	border-bottom: 1px solid #CCC!important;
 	border-left: 1px solid #CCC!important;
 	border-right: 1px solid #CCC!important;
 }
 
-textarea.form-element.form-element-focus, input.form-element.form-element-focus, select.form-element.form-element-focus,
-textarea.form-small.form-element-focus, input.form-small.form-element-focus, select.form-small.form-element-focus {
+textarea.form-element.form-element-focused, input.form-element.form-element-focused, select.form-element.form-element-focused,
+textarea.form-small.form-element-focused, input.form-small.form-element-focused, select.form-small.form-element-focused {
 	border: 2px solid #FFFFCC!important;
 }
 
+textarea.form-element.form-element-modified, input.form-element.form-element-modified, select.form-element.form-element-modified,
+textarea.form-small.form-element-modified, input.form-small.form-element-modified, select.form-small.form-element-modified {
+	background-color: #FFFFE8!important;
+}
+
 textarea {
-	border: 1px solid #666;
 	color: black;
-	width: 88%;
+	width: 98%;
 	padding: 0.1em;
 }
 
 input {
 	font: 100% Arial, sans-serif;
-	border: 1px solid #666;
 	color: black;
 	vertical-align: middle;
 	margin-bottom: 1px; /* IE bug fix */
@@ -626,9 +630,15 @@ input {
 
 select {
 	font: 100% Arial, sans-serif;
-	border: 1px solid #666;
 	color: black;
 	vertical-align: top;
+}
+select.form-element {
+	width: 98%;
+	overflow:hidden;
+}
+select.form-small {
+	overflow:hidden;
 }
 
 /* +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
